--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,9 +6,38 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_1
+    name: 🇵🇱_PL_波兰
+    type: trojan
+    server: 51.83.186.142
+    port: 80
+    udp: true
+    password: 555034c8-6420-45d0-893c-905c02342150
+    sni: pl1.trojanvh.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id002
+    name: 🇫🇷_FR_法国
+    type: trojan
+    server: 51.91.11.29
+    port: 80
+    udp: true
+    password: e0d44ae7-cb7d-4acc-a8c0-9861a6f5eaad
+    skip-cert-verify: true
+    network: tcp
+  - &id003
+    name: 🇺🇸_US_美国_1
+    type: trojan
+    server: 135.148.148.4
+    port: 80
+    udp: true
+    password: ee2bccd3-0f30-42d4-86d6-3d393ad230bd
+    sni: us3.trojanvh.xyz\\r
+    skip-cert-verify: true
+    network: tcp
+  - &id004
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 172.67.211.253
+    server: 172.67.149.100
     port: 80
     cipher: auto
     uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
@@ -20,60 +49,38 @@ proxies:
       path: /shirker
       headers:
         host: ca.ilovescp.com
-  - &id002
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
-    type: vmess
-    server: 10.kccic2pa.xyz
-    port: 50010
-    cipher: auto
-    uuid: 66a5e5f4-4d18-474a-ad2d-3f11e09058e9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id003
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
-    type: ss
-    server: free.node.kk-proxy.pro
-    port: 24962
-    password: 72f0fd15-fbb7-411f-8b33-e59a742300db
-    cipher: chacha20-ietf-poly1305
-  - &id004
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: cn-guangzhou.applebench.tech
-    port: 16666
-    cipher: auto
-    uuid: 666d382c-d614-4129-aedb-06c63982820a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
   - &id005
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: 104.31.16.14
-    port: 443
+    server: 172.64.229.116
+    port: 8880
     cipher: auto
-    uuid: d53cc5f9-b8ff-4cbe-bf10-295956c03276
+    uuid: 4b5e4565-322f-4223-a891-78a84f189726
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
-    servername: de1vm.cdn-03.live
     network: ws
     ws-opts:
-      path: /@hopev2ray
+      path: /XQ2WCa29jfDMGBcbnQ
       headers:
-        host: de1vm.cdn-03.live
+        host: netherlands.yj2022.gq
   - &id006
-    name: 🇨🇳_CN_中国_1
-    type: ss
-    server: free.node.kk-proxy.pro
-    port: 55928
-    password: 72f0fd15-fbb7-411f-8b33-e59a742300db
-    cipher: chacha20-ietf-poly1305
+    name: 🇺🇸_US_美国->🇨🇱_CL_智利
+    type: vmess
+    server: sdyg2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 53701585-591f-48a3-9515-8831ed0524ac
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sdyg2.shabijichang.com
   - &id007
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
     server: 104.31.16.14
     port: 80
@@ -88,50 +95,138 @@ proxies:
       headers:
         host: de1vm.cdn-03.live
   - &id008
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    name: 🇺🇸_US_美国_4
     type: vmess
-    server: 17.kccic2pa.xyz
-    port: 50017
+    server: 137.175.88.221
+    port: 43023
     cipher: auto
-    uuid: 66a5e5f4-4d18-474a-ad2d-3f11e09058e9
-    alterId: 0
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
     tls: false
     skip-cert-verify: true
     network: tcp
   - &id009
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    name: 🇺🇸_US_美国_5
     type: vmess
-    server: 09.kccic2pa.xyz
-    port: 50009
+    server: 137.175.82.148
+    port: 443
     cipher: auto
-    uuid: 66a5e5f4-4d18-474a-ad2d-3f11e09058e9
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1695032909164
+      headers:
+        host: www.66699852.xyz
+  - &id010
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 142.4.114.19
+    port: 443
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1695032909164
+      headers:
+        host: www.47734954.xyz
+  - &id011
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 137.175.3.41
+    port: 443
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1695032909164
+      headers:
+        host: www.37419052.xyz
+  - &id012
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    type: vmess
+    server: 104.18.12.192
+    port: 80
+    cipher: auto
+    uuid: 60492148-7815-4259-acdc-92bd15afa81c
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
-    type: ss
-    server: free.node.kk-proxy.pro
-    port: 24961
-    password: 72f0fd15-fbb7-411f-8b33-e59a742300db
-    cipher: chacha20-ietf-poly1305
-  - &id011
-    name: 🇯🇵_JP_日本_1
-    type: ss
-    server: 54.238.87.162
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id012
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
-    type: ss
-    server: cm1-go.go001.buzz
-    port: 31101
-    password: '123456'
-    cipher: aes-256-gcm
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: france-1vm.mr-radwan-daoud.de
   - &id013
-    name: 🇯🇵_JP_日本_2
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 107.148.195.129
+    port: 443
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1695032909164
+      headers:
+        host: www.30372614.xyz
+  - &id014
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 192.74.240.26
+    port: 443
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1694947665388
+      headers:
+        host: www.70812236.xyz
+  - &id015
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    type: vmess
+    server: datacenter.ct.01.biqibao.site
+    port: 2052
+    cipher: auto
+    uuid: 4931e941-77c6-4144-a8b9-5c252ee36c30
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /public?ed=4096
+      headers:
+        host: de.biqibao.site
+  - &id016
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 198.2.213.155
+    port: 443
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1695032909164
+      headers:
+        host: www.42438779.xyz
+  - &id017
+    name: 🇯🇵_JP_日本
     type: trojan
     server: 103.168.155.69
     port: 3306
@@ -142,33 +237,235 @@ proxies:
     network: ws
     ws-opts:
       path: /gateway/connect
-  - &id014
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
-    type: trojan
-    server: ufxeq-1080-tr-9.d-kcd.tuil.xyz
-    port: 39929
-    udp: true
-    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
-    sni: edge.cjhh.mom
-    skip-cert-verify: true
-    network: tcp
-  - &id015
-    name: 🇺🇸_US_美国->🇨🇱_CL_智利
+      headers:
+        host: n2.gladns.com
+  - &id018
+    name: 🇺🇸_US_美国_11
     type: vmess
-    server: fd.shabijichang.com
-    port: 80
+    server: 142.0.130.70
+    port: 443
     cipher: auto
-    uuid: 5e48a497-f4ae-4129-afd6-ba26d75b792a
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1695032909164
+      headers:
+        host: www.71891316.xyz
+  - &id019
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
+    type: vmess
+    server: 104.17.77.6
+    port: 2052
+    cipher: auto
+    uuid: 23bea995-d5db-4530-85d1-ddb2082e1811
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /public
       headers:
-        host: sdyg.shabijichang.com
-  - &id016
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+        host: de.biqibao.site
+  - &id020
+    name: 🇸🇬_SG_新加坡->🇺🇸_US_美国
+    type: vmess
+    server: cdn.chigua.tk
+    port: 80
+    cipher: auto
+    uuid: 7e7f8398-bd39-49d8-9ce6-e48ffef463dd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /2TokGE9A/
+      headers:
+        host: us6.cachexy.cf
+  - &id021
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: sg.wyhkaa0.cf
+    port: 80
+    cipher: auto
+    uuid: 0ba28c05-7bd9-4cad-c329-482386a8e7a3
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /TG:@hkaa0
+      headers:
+        host: sg.wyhkaa0.cf
+  - &id022
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: soap2day.to
+    port: 443
+    cipher: auto
+    uuid: 7522A28C-F9A1-40A0-BD92-67CF39AB5D5B
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /speedtest
+      headers:
+        host: Dusseldorf.bobbykotick.rip
+  - &id023
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
+    type: vmess
+    server: bxcc.76898102.xyz
+    port: 2052
+    cipher: auto
+    uuid: 9defd968-d21f-326b-b422-a9fedf0bcf80
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /bxsmiao
+      headers:
+        host: bxc.76898102.xyz
+  - &id024
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 162.159.130.115
+    port: 2052
+    cipher: auto
+    uuid: 23bea995-d5db-4530-85d1-ddb2082e1811
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /public
+      headers:
+        host: us-miami.biqibao.site
+  - &id025
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+    type: vmess
+    server: ns1.v2-vip.fun
+    port: 8880
+    cipher: auto
+    uuid: 617c9bc4-4116-41c6-99e0-ace49a38fcdb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
+      headers:
+        host: fr7.tehme100.fun
+  - &id026
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
+    type: trojan
+    server: jjozz-1092-tr-8.r-kcd-b.iote.bond
+    port: 39919
+    udp: true
+    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
+    sni: cdn.cjhh.lol
+    skip-cert-verify: true
+    network: tcp
+  - &id027
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
+    type: trojan
+    server: fgddt-1082-tr-4.r-kcd-a.tuil.xyz
+    port: 39909
+    udp: true
+    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
+    sni: s3.cjhh.beauty
+    skip-cert-verify: true
+    network: tcp
+  - &id028
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_3
+    type: vmess
+    server: aobre-1092-v2-7.r-kcd-b.iote.bond
+    port: 39918
+    cipher: auto
+    uuid: a590e692-4c8d-42dd-ba80-b1765a34f699
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /je5x3pBN1vez3NQudNkB
+      headers:
+        host: cdn.cjhh.lol
+  - &id029
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_4
+    type: vmess
+    server: upghr-1082-v2-6.r-kcd-a.tuil.xyz
+    port: 39908
+    cipher: auto
+    uuid: a590e692-4c8d-42dd-ba80-b1765a34f699
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /je5x3pBN1vez3NQudNkB
+      headers:
+        host: s3.cjhh.beauty
+  - &id030
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本
+    type: trojan
+    server: zjpvc-1083-tr-0.r-kcd-b.tuil.xyz
+    port: 29969
+    udp: true
+    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
+    sni: cdn.cjhh.lol
+    skip-cert-verify: true
+    network: tcp
+  - &id031
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
+    type: vmess
+    server: dx1.992688.xyz
+    port: 8080
+    cipher: auto
+    uuid: d9a355ba-18f8-40db-892d-a481bbf777f9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: eu3.vpn66.eu.org
+  - &id032
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
+    type: vmess
+    server: yd1.992688.xyz
+    port: 8080
+    cipher: auto
+    uuid: 82019216-cf7c-4e46-8206-d37b4d9cb9d7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: eu4.vpn66.eu.org
+  - &id033
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: cf.fovi.tk
+    port: 443
+    cipher: auto
+    uuid: bf67437e-6c90-45ca-abc2-c7240a5ce2aa
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /eisasqa
+      headers:
+        host: foxlux.fovi.tk
+  - &id034
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_5
     type: vmess
     server: yd1.992688.xyz
     port: 8880
@@ -182,210 +479,6 @@ proxies:
       path: /
       headers:
         host: vceu3.vpn66.eu.org
-  - &id017
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
-    type: vmess
-    server: mrb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 53701585-591f-48a3-9515-8831ed0524ac
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mrb2.shabijichang.com
-  - &id018
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
-    type: vmess
-    server: 172.64.229.116
-    port: 8880
-    cipher: auto
-    uuid: 4b5e4565-322f-4223-a891-78a84f189726
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /XQ2WCa29jfDMGBcbnQ
-      headers:
-        host: netherlands.yj2022.gq
-  - &id019
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_2
-    type: vmess
-    server: 172.67.6.189
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: ca.ilovescp.com
-  - &id020
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_3
-    type: trojan
-    server: rpete-1096-tr-3.r-kcd-e.iote.bond
-    port: 29989
-    udp: true
-    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
-    sni: cdn.cjhh.lol
-    skip-cert-verify: true
-    network: tcp
-  - &id021
-    name: 🇨🇳_CN_中国_2
-    type: vmess
-    server: 6q59.cdn.node.a.tddns-ounk.com
-    port: 40261
-    cipher: auto
-    uuid: 72bea5d3-7591-3ca4-9d61-3c89bd6e45a5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /d1af668b-cff6-464a-9415-a7782ead72d5.j.live003.m3u8
-      headers:
-        host: 6q59.cdn.node.a.tddns-ounk.com
-  - &id022
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
-    type: vmess
-    server: zfc.windowsupdate1.com
-    port: 443
-    cipher: auto
-    uuid: 4c2e7f40-3011-4c77-a066-eda17440e985
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /yfjc/nl2?ed=2048
-      headers:
-        host: nl2.yfjc.sbs
-  - &id023
-    name: 🇺🇸_US_美国_1
-    type: trojan
-    server: 163.123.192.33
-    port: 443
-    udp: true
-    password: 4c2e7f40-3011-4c77-a066-eda17440e985
-    sni: 16-163-218-240.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id024
-    name: 🇺🇸_US_美国_2
-    type: trojan
-    server: 163.123.192.112
-    port: 443
-    udp: true
-    password: 4c2e7f40-3011-4c77-a066-eda17440e985
-    sni: 16-163-218-240.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id025
-    name: 🇯🇵_JP_日本_3
-    type: trojan
-    server: 18.182.26.232
-    port: 20003
-    udp: true
-    password: d8c88fd3-7fe4-422c-acf0-b2e6fc18af20
-    sni: fschk.1234567890spcloud.com
-    skip-cert-verify: true
-    network: tcp
-  - &id026
-    name: 🇺🇸_US_美国->🇻🇳_VN_越南
-    type: vmess
-    server: Tokyo.mfa.ee
-    port: 2052
-    cipher: auto
-    uuid: 992889a7-296e-4a44-98c2-0eb89af4411d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: vnpt.iiio.wiki
-  - &id027
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_3
-    type: vmess
-    server: 172.67.149.100
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: ca.ilovescp.com
-  - &id028
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
-    type: trojan
-    server: 110.72.99.118
-    port: 3306
-    udp: true
-    password: 8b475d9e868e43e0
-    sni: n2.gladns.com
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /gateway/connect
-      headers:
-        host: n2.gladns.com
-  - &id029
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_4
-    type: vmess
-    server: 162.159.243.53
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: ca.ilovescp.com
-  - &id030
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_5
-    type: vmess
-    server: 172.67.92.119
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: ca.ilovescp.com
-  - &id031
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: us2.mianfenyun012.eu.org
-    port: 8080
-    cipher: auto
-    uuid: a8966719-aeaf-4886-d202-72f75f845b83
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /jdbp606
-      headers:
-        host: us2.mianfenyun012.eu.org
 proxy-groups:
   - name: PROXY
     type: select
@@ -443,6 +536,9 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
+      - *id032
+      - *id033
+      - *id034
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -479,6 +575,9 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
+      - *id032
+      - *id033
+      - *id034
   - name: SELECT
     type: select
     proxies:
@@ -513,6 +612,9 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
+      - *id032
+      - *id033
+      - *id034
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
