--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,38 +6,54 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇵🇱_PL_波兰
-    type: trojan
-    server: 51.83.186.142
+    name: 🇺🇸_US_美国->🇨🇳_CN_中国_1
+    type: vmess
+    server: 172.67.196.139
     port: 80
-    udp: true
-    password: 555034c8-6420-45d0-893c-905c02342150
-    sni: pl1.trojanvh.xyz
+    cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: ca.ilovescp.com
   - &id002
-    name: 🇫🇷_FR_法国
-    type: trojan
-    server: 51.91.11.29
+    name: 🇺🇸_US_美国->🇨🇳_CN_中国_2
+    type: vmess
+    server: 172.67.10.151
     port: 80
-    udp: true
-    password: e0d44ae7-cb7d-4acc-a8c0-9861a6f5eaad
+    cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: ca.ilovescp.com
   - &id003
     name: 🇺🇸_US_美国_1
-    type: trojan
-    server: 135.148.148.4
-    port: 80
-    udp: true
-    password: ee2bccd3-0f30-42d4-86d6-3d393ad230bd
-    sni: us3.trojanvh.xyz\\r
-    skip-cert-verify: true
-    network: tcp
-  - &id004
-    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 172.67.149.100
+    server: db2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 53701585-591f-48a3-9515-8831ed0524ac
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: db2.shabijichang.com
+  - &id004
+    name: 🇺🇸_US_美国->🇨🇳_CN_中国_3
+    type: vmess
+    server: 172.67.59.39
     port: 80
     cipher: auto
     uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
@@ -50,36 +66,91 @@ proxies:
       headers:
         host: ca.ilovescp.com
   - &id005
-    name: 🇺🇸_US_美国_3
+    name: 🇺🇸_US_美国->🇨🇳_CN_中国_4
     type: vmess
-    server: 172.64.229.116
-    port: 8880
-    cipher: auto
-    uuid: 4b5e4565-322f-4223-a891-78a84f189726
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /XQ2WCa29jfDMGBcbnQ
-      headers:
-        host: netherlands.yj2022.gq
-  - &id006
-    name: 🇺🇸_US_美国->🇨🇱_CL_智利
-    type: vmess
-    server: sdyg2.shabijichang.com
+    server: 172.67.211.253
     port: 80
     cipher: auto
-    uuid: 53701585-591f-48a3-9515-8831ed0524ac
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /shirker
       headers:
-        host: sdyg2.shabijichang.com
+        host: ca.ilovescp.com
+  - &id006
+    name: 🇺🇸_US_美国->🇨🇳_CN_中国_5
+    type: vmess
+    server: 172.67.120.174
+    port: 80
+    cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: ca.ilovescp.com
   - &id007
+    name: 🇨🇳_CN_中国_1
+    type: trojan
+    server: ufxeq-1080-tr-9.d-kcd.tuil.xyz
+    port: 39929
+    udp: true
+    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
+    sni: edge.cjhh.mom
+    skip-cert-verify: true
+    network: tcp
+  - &id008
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
+    type: trojan
+    server: rpete-1096-tr-3.r-kcd-e.iote.bond
+    port: 29989
+    udp: true
+    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
+    sni: cdn.cjhh.lol
+    skip-cert-verify: true
+    network: tcp
+  - &id009
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    type: vmess
+    server: 104.17.77.6
+    port: 2052
+    cipher: auto
+    uuid: 23bea995-d5db-4530-85d1-ddb2082e1811
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /public
+      headers:
+        host: de.biqibao.site
+  - &id010
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
+    type: trojan
+    server: fgddt-1082-tr-4.r-kcd-a.tuil.xyz
+    port: 39909
+    udp: true
+    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
+    sni: s3.cjhh.beauty
+    skip-cert-verify: true
+    network: tcp
+  - &id011
+    name: 🇨🇳_CN_中国_2
+    type: trojan
+    server: zjpvc-1083-tr-0.r-kcd-b.tuil.xyz
+    port: 29969
+    udp: true
+    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
+    sni: cdn.cjhh.lol
+    skip-cert-verify: true
+    network: tcp
+  - &id012
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
     server: 104.31.16.14
@@ -94,258 +165,23 @@ proxies:
       path: /@hopev2ray
       headers:
         host: de1vm.cdn-03.live
-  - &id008
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 137.175.88.221
-    port: 43023
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id009
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 137.175.82.148
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1695032909164
-      headers:
-        host: www.66699852.xyz
-  - &id010
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 142.4.114.19
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1695032909164
-      headers:
-        host: www.47734954.xyz
-  - &id011
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 137.175.3.41
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1695032909164
-      headers:
-        host: www.37419052.xyz
-  - &id012
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
-    type: vmess
-    server: 104.18.12.192
-    port: 80
-    cipher: auto
-    uuid: 60492148-7815-4259-acdc-92bd15afa81c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: france-1vm.mr-radwan-daoud.de
   - &id013
-    name: 🇺🇸_US_美国_8
+    name: 🇨🇷_CR_哥斯达黎加->🇮🇳_IN_印度
     type: vmess
-    server: 107.148.195.129
+    server: 190.93.245.8
     port: 443
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
+    uuid: 99357805-2332-4548-95d7-73bf03c24599
+    alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /path/1695032909164
+      path: /
       headers:
-        host: www.30372614.xyz
+        host: jp.denny.cf
   - &id014
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: 192.74.240.26
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1694947665388
-      headers:
-        host: www.70812236.xyz
-  - &id015
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
-    type: vmess
-    server: datacenter.ct.01.biqibao.site
-    port: 2052
-    cipher: auto
-    uuid: 4931e941-77c6-4144-a8b9-5c252ee36c30
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /public?ed=4096
-      headers:
-        host: de.biqibao.site
-  - &id016
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: 198.2.213.155
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1695032909164
-      headers:
-        host: www.42438779.xyz
-  - &id017
-    name: 🇯🇵_JP_日本
-    type: trojan
-    server: 103.168.155.69
-    port: 3306
-    udp: true
-    password: 3febb05ea76a940f
-    sni: n2.gladns.com
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /gateway/connect
-      headers:
-        host: n2.gladns.com
-  - &id018
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: 142.0.130.70
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1695032909164
-      headers:
-        host: www.71891316.xyz
-  - &id019
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
-    type: vmess
-    server: 104.17.77.6
-    port: 2052
-    cipher: auto
-    uuid: 23bea995-d5db-4530-85d1-ddb2082e1811
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /public
-      headers:
-        host: de.biqibao.site
-  - &id020
-    name: 🇸🇬_SG_新加坡->🇺🇸_US_美国
-    type: vmess
-    server: cdn.chigua.tk
-    port: 80
-    cipher: auto
-    uuid: 7e7f8398-bd39-49d8-9ce6-e48ffef463dd
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /2TokGE9A/
-      headers:
-        host: us6.cachexy.cf
-  - &id021
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: sg.wyhkaa0.cf
-    port: 80
-    cipher: auto
-    uuid: 0ba28c05-7bd9-4cad-c329-482386a8e7a3
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /TG:@hkaa0
-      headers:
-        host: sg.wyhkaa0.cf
-  - &id022
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: soap2day.to
-    port: 443
-    cipher: auto
-    uuid: 7522A28C-F9A1-40A0-BD92-67CF39AB5D5B
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /speedtest
-      headers:
-        host: Dusseldorf.bobbykotick.rip
-  - &id023
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
-    type: vmess
-    server: bxcc.76898102.xyz
-    port: 2052
-    cipher: auto
-    uuid: 9defd968-d21f-326b-b422-a9fedf0bcf80
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /bxsmiao
-      headers:
-        host: bxc.76898102.xyz
-  - &id024
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: 162.159.130.115
-    port: 2052
-    cipher: auto
-    uuid: 23bea995-d5db-4530-85d1-ddb2082e1811
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /public
-      headers:
-        host: us-miami.biqibao.site
-  - &id025
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
     type: vmess
     server: ns1.v2-vip.fun
     port: 8880
@@ -359,113 +195,122 @@ proxies:
       path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
       headers:
         host: fr7.tehme100.fun
-  - &id026
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
-    type: trojan
-    server: jjozz-1092-tr-8.r-kcd-b.iote.bond
-    port: 39919
-    udp: true
-    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
-    sni: cdn.cjhh.lol
-    skip-cert-verify: true
-    network: tcp
-  - &id027
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
-    type: trojan
-    server: fgddt-1082-tr-4.r-kcd-a.tuil.xyz
-    port: 39909
-    udp: true
-    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
-    sni: s3.cjhh.beauty
-    skip-cert-verify: true
-    network: tcp
-  - &id028
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_3
+  - &id015
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
-    server: aobre-1092-v2-7.r-kcd-b.iote.bond
-    port: 39918
+    server: 104.31.16.69
+    port: 2083
     cipher: auto
-    uuid: a590e692-4c8d-42dd-ba80-b1765a34f699
+    uuid: 15bf0db4-fbff-46d0-a486-b6e4a9e74a91
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /je5x3pBN1vez3NQudNkB
+      path: /
       headers:
-        host: cdn.cjhh.lol
-  - &id029
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_4
-    type: vmess
-    server: upghr-1082-v2-6.r-kcd-a.tuil.xyz
-    port: 39908
-    cipher: auto
-    uuid: a590e692-4c8d-42dd-ba80-b1765a34f699
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /je5x3pBN1vez3NQudNkB
-      headers:
-        host: s3.cjhh.beauty
-  - &id030
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本
-    type: trojan
-    server: zjpvc-1083-tr-0.r-kcd-b.tuil.xyz
-    port: 29969
-    udp: true
-    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
-    sni: cdn.cjhh.lol
-    skip-cert-verify: true
-    network: tcp
-  - &id031
+        host: germany-one.port888.site
+  - &id016
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
     type: vmess
-    server: dx1.992688.xyz
-    port: 8080
+    server: 104.31.16.71
+    port: 2083
     cipher: auto
-    uuid: d9a355ba-18f8-40db-892d-a481bbf777f9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: eu3.vpn66.eu.org
-  - &id032
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
-    type: vmess
-    server: yd1.992688.xyz
-    port: 8080
-    cipher: auto
-    uuid: 82019216-cf7c-4e46-8206-d37b4d9cb9d7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: eu4.vpn66.eu.org
-  - &id033
-    name: 🇺🇸_US_美国_15
-    type: vmess
-    server: cf.fovi.tk
-    port: 443
-    cipher: auto
-    uuid: bf67437e-6c90-45ca-abc2-c7240a5ce2aa
+    uuid: 15bf0db4-fbff-46d0-a486-b6e4a9e74a91
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /eisasqa
+      path: /
       headers:
-        host: foxlux.fovi.tk
-  - &id034
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_5
+        host: germany-one.port888.site
+  - &id017
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: fhc.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 5e48a497-f4ae-4129-afd6-ba26d75b792a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: fhc2.shabijichang.com
+  - &id018
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: ss
+    server: starspeed.tbh.iosds.com
+    port: 30417
+    password: bb97375a-806f-4aa1-8477-daf235a362d2
+    cipher: chacha20-ietf-poly1305
+  - &id019
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本
+    type: ss
+    server: starspeed.tbh.iosds.com
+    port: 19890
+    password: bb97375a-806f-4aa1-8477-daf235a362d2
+    cipher: chacha20-ietf-poly1305
+  - &id020
+    name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡
+    type: vmess
+    server: cf.yx.alue.link
+    port: 2052
+    cipher: auto
+    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: lu.wx.alue.link
+  - &id021
+    name: 🇯🇵_JP_日本_1
+    type: ss
+    server: 52.192.188.144
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id022
+    name: 🇹🇼_TW_台湾_1
+    type: vmess
+    server: 36.227.223.139
+    port: 60982
+    cipher: auto
+    uuid: 0fafb730-f3ec-3fd8-a637-eadf20c9febf
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id023
+    name: 🇯🇵_JP_日本_2
+    type: ss
+    server: 18.182.4.121
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id024
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: sdyg2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 53701585-591f-48a3-9515-8831ed0524ac
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sdyg2.shabijichang.com
+  - &id025
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
     type: vmess
     server: yd1.992688.xyz
     port: 8880
@@ -479,6 +324,120 @@ proxies:
       path: /
       headers:
         host: vceu3.vpn66.eu.org
+  - &id026
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡
+    type: ss
+    server: starspeed.tbh.iosds.com
+    port: 44023
+    password: bb97375a-806f-4aa1-8477-daf235a362d2
+    cipher: chacha20-ietf-poly1305
+  - &id027
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_5
+    type: vmess
+    server: 104.31.16.70
+    port: 2083
+    cipher: auto
+    uuid: 15bf0db4-fbff-46d0-a486-b6e4a9e74a91
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: germany-one.port888.site
+  - &id028
+    name: 🇹🇼_TW_台湾_2
+    type: vmess
+    server: twpaopao4.dskjahf.xyz
+    port: 228
+    cipher: auto
+    uuid: 0fafb730-f3ec-3fd8-a637-eadf20c9febf
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id029
+    name: 🇯🇵_JP_日本_3
+    type: ss
+    server: 13.112.142.112
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id030
+    name: 🇯🇵_JP_日本_4
+    type: ss
+    server: 3.112.129.10
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id031
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: ss
+    server: starspeed.tbh.iosds.com
+    port: 51855
+    password: bb97375a-806f-4aa1-8477-daf235a362d2
+    cipher: chacha20-ietf-poly1305
+  - &id032
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_6
+    type: vmess
+    server: yd1.992688.xyz
+    port: 8080
+    cipher: auto
+    uuid: cafbdf1c-5812-492f-92ac-330650c6ecf0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: eu1.vpn66.eu.org
+  - &id033
+    name: 🇯🇵_JP_日本->🇸🇬_SG_新加坡
+    type: trojan
+    server: 1gzdx2.156786.xyz
+    port: 37905
+    udp: true
+    password: 98bae868-4f00-40e0-9603-8d848644ec44
+    sni: hkmax06.170203.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id034
+    name: 🇺🇸_US_美国_4
+    type: trojan
+    server: yuumv-1088-tr-0.d-kcd.tuil.xyz
+    port: 889
+    udp: true
+    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
+    sni: s3.cjhh.beauty
+    skip-cert-verify: true
+    network: tcp
+  - &id035
+    name: 🇺🇸_US_美国_5
+    type: trojan
+    server: 65.75.220.124
+    port: 889
+    udp: true
+    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
+    sni: s3.cjhh.beauty
+    skip-cert-verify: true
+    network: tcp
+  - &id036
+    name: 🇺🇸_US_美国->🇻🇳_VN_越南
+    type: vmess
+    server: Tokyo.mfa.ee
+    port: 2052
+    cipher: auto
+    uuid: 992889a7-296e-4a44-98c2-0eb89af4411d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: vnpt.iiio.wiki
 proxy-groups:
   - name: PROXY
     type: select
@@ -539,6 +498,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -578,6 +539,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -615,6 +578,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
